--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -1582,9 +1582,17 @@ main[data-order_expanded] section:last-of-type {
   align-items: center;
 }
 
-main[data-order_expanded] section:last-of-type p {
+main[data-order_expanded] section:last-of-type > ul {
   color: white;
-  font-size: 20px;
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+main[data-order_expanded] section:last-of-type > ul > li {
+  display: flex;
+  flex-direction: column;
 }
 
 main[data-order_expanded] section:first-of-type {
@@ -1995,6 +2003,17 @@ main[data-book_modify] div:last-of-type > button:hover {
 
   main[data-order_expanded] section:first-of-type {
     width: 100%;
+  }
+
+  main[data-order_expanded] section:last-of-type > ul{
+    width: 60%;
+    gap: 5px;
+  }
+
+  main[data-order_expanded] section:last-of-type > ul > li{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   main[data-order_expanded] section:first-of-type > p {
